[package]
name = "restful-climbing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls"] }
actix-web = "4.3.1"
tokio = { version = "1.26.0", features = ["full"] }
dotenv = "0.15.0"